
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 NOV 20a
  * in cycle/tsemf/_GS/tsemf.c
    - in update_dUstar_emfield_SOR2_node(), added "long i,j,k;" when NDEBUG is not defined
  * in model/fluid/doc/Transport_Equations/report.tex
    - Started improving the section on the electron energy loss function
  * in tools/chemkin2cfdwarp.c
    - made various improvements so that the species names are stored in RAM and not in a file


2022 NOV 04a
  * in src/control.c
    - in read_control_functions(), removed calls to _x_DISTMPI_local(), _y_DISTMPI_local(),
      _z_DISTMPI_local() and replaced them by calls to _x_DISTMPI_global()
    - calls to _x_global() in the control file are now deprecated. Use _x() instead
     

2022 NOV 03b
  * in src/bdry.c
    - in read_bdry(), fixed a bug related to the call of the functions _x(), _y(),
      _x_global(), _y_global() in the module Bdry() when using MPI.
      

2022 NOV 03a
  * in lib/exm/exm.c
    - in EXM_angle_between_vectors(), now calls EXM_normalize_vector()
    - added EXM_normalize_vector()
    - added EXM_find_rotation_matrix()
    - added EXM_multiply_matrix_vector()
  * in lib/gridg/3Dbase.c
    - added function _distance()
    - rewrote entirely the function Plane() in general form using the rotation matrix; fixes
      issues we had previously with this function
  * in lib/gridg/share.c
    - added GRIDG_al3()
    - added GRIDG_find_ijk_from_l()
    

2022 OCT 28a
  * in cycle/share/cycle_share.c
    - in update_linked_nodes(), fixed a bug that occurred when using MPI and nodes linked together
      through the Bdry(Link()) command: when the linked inner nodes were not aligned with the linked
      boundary nodes along the same axis (either i, j, of k), the function update_linked_nodes()