@@ -147,7 +147,7 @@ INITSTRATEGY_P=1;
 INITSTRATEGY_RE=2;
 INITSTRATEGY=INITSTRATEGY_P;
 
-CASE=3;
+CASE=1;
 
 
 if (CASE==1,
